@@ -36,6 +36,7 @@ namespace Brainworxx\Krexx\Analyse\Callback\Iterate;
 
 use Brainworxx\Krexx\Analyse\Callback\AbstractCallback;
 use Brainworxx\Krexx\Analyse\Code\Connectors;
+use Brainworxx\Krexx\Analyse\Code\ReflectionParameterWrapper;
 
 /**
  * Methods analysis methods. :rolleyes:
@@ -82,12 +83,13 @@ class ThroughMethods extends AbstractCallback
             $paramList = '';
             foreach ($reflectionMethod->getParameters() as $key => $reflectionParameter) {
                 ++$key;
+                /** @var ReflectionParameterWrapper $reflectionParameterWrapper */
                 $reflectionParameterWrapper = $this->pool
                     ->createClass('Brainworxx\\Krexx\\Analyse\\Code\\ReflectionParameterWrapper')
                     ->setReflectionParameter($reflectionParameter);
 
-                $methodData['Parameter #' . $key] = $reflectionParameterWrapper;
-                $paramList .= $reflectionParameterWrapper . ', ';
+                $methodData['Parameter #' . $key] = $reflectionParameterWrapper->toString();
+                $paramList .= $reflectionParameterWrapper->toString() . ', ';
             }
 
             // Remove the ',' after the last char.
