@@ -29,6 +29,8 @@
 - Bugfix: Missing leading backslash in classname display in several
   places.
 - Bugfix: Code generation respects the scope analysis.
+- Bugfix: The method analysis is now displayes the default parameter
+  values correctly (or at all).
 
 2.2.0
 - Added more search pattern and source code parsing to the
